force-app/main/default/objects/sma__MATerritoryRollup__c/sma__MATerritoryRollup__c.object-meta.xml
<CustomObject>
    <label>MapAnything Territory Rollup</label>
    <nameField>
        <label>Rollup Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>MapAnything Territory Rollups</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>