force-app/main/default/objects/sma__MATerritoryRollup__c/fields/sma__AggregateField__c.field-meta.xml
<CustomField>
    <fullName>sma__AggregateField__c</fullName>
    <label>Aggregate Field</label>
    <length>255</length>
    <type>Text</type>
</CustomField>