force-app/main/default/objects/sma__MATerritoryRollup__c/fields/sma__AggregateFieldType__c.field-meta.xml
<CustomField>
    <fullName>sma__AggregateFieldType__c</fullName>
    <label>Aggregate Field Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>String</fullName>
            </value>
            <value>
                <fullName>Currency</fullName>
            </value>
            <value>
                <fullName>Number</fullName>
            </value>
            <value>
                <fullName>Date</fullName>
            </value>
            <value>
                <fullName>Datetime</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>