force-app/main/default/objects/sma__MATerritoryRollup__c/fields/sma__AggregateType__c.field-meta.xml
<CustomField>
    <fullName>sma__AggregateType__c</fullName>
    <label>Aggregate Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Count</fullName>
            </value>
            <value>
                <fullName>Sum</fullName>
            </value>
            <value>
                <fullName>Min</fullName>
            </value>
            <value>
                <fullName>Max</fullName>
            </value>
            <value>
                <fullName>Average</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>