force-app/main/default/objects/sma__MATerritoryRollup__c/fields/sma__ColorRules__c.field-meta.xml
<CustomField>
    <fullName>sma__ColorRules__c</fullName>
    <label>Color Rules</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>