force-app/main/default/objects/sma__MATerritoryRollup__c/fields/sma__Field__c.field-meta.xml
<CustomField>
    <fullName>sma__Field__c</fullName>
    <label>Field</label>
    <length>255</length>
    <type>Text</type>
</CustomField>