force-app/main/default/objects/sma__MATerritoryRollup__c/fields/sma__FilterLogic__c.field-meta.xml
<CustomField>
    <fullName>sma__FilterLogic__c</fullName>
    <label>Filter Logic</label>
    <length>255</length>
    <type>Text</type>
</CustomField>