force-app/main/default/objects/sma__MATerritoryRollup__c/fields/sma__Folder__c.field-meta.xml
<CustomField>
    <fullName>sma__Folder__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Folder</label>
    <referenceTo>sma__MATerritoryRollupFolder__c</referenceTo>
    <relationshipLabel>Rollups</relationshipLabel>
    <relationshipName>Rollups</relationshipName>
    <type>Lookup</type>
</CustomField>