force-app/main/default/objects/sma__MATerritoryRollup__c/fields/sma__GrandparentField__c.field-meta.xml
<CustomField>
    <fullName>sma__GrandparentField__c</fullName>
    <label>Grandparent Field</label>
    <length>255</length>
    <type>Text</type>
</CustomField>