force-app/main/default/objects/sma__MATerritoryRollup__c/fields/sma__LastRunDate__c.field-meta.xml
<CustomField>
    <fullName>sma__LastRunDate__c</fullName>
    <label>Last Run Date</label>
    <type>DateTime</type>
</CustomField>