force-app/main/default/objects/sma__MATerritoryRollup__c/fields/sma__TerritoryField__c.field-meta.xml
<CustomField>
    <fullName>sma__TerritoryField__c</fullName>
    <label>Territory Field</label>
    <length>255</length>
    <type>Text</type>
</CustomField>